--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,20 @@
 {
     "version": 2,
     "builds": [
-      { "src": "gulpfile.js", "use": "@vercel/static-build" },
-      { "src": "package.json", "use": "@vercel/node" }
+      {
+        "src": "server.py",
+        "use": "@vercel/python"
+      },
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build"
+      }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "server.py" },
-      { "src": "/(.*)", "dest": "dist/$1" }
+      {
+        "src": "/(.*)",
+        "dest": "server.py"
+      }
     ]
   }
   
